force-app/main/default/objects/Scale_Entitlement__c/Scale_Entitlement__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used for linking Entitlement with the Asset (Hardware) and Lic. sold to Customer</description>
    <label>Scale Entitlement Asset</label>
    <nameField>
        <displayFormat>SCALE-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scale Entitlements Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>