force-app/main/default/objects/Scale_Entitlement__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Scale Entitlements Assets</relationshipLabel>
    <relationshipName>Scale_Entitlements_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>