force-app/main/default/objects/Scale_Entitlement__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Linked Scale Entitlements and Assets</relationshipLabel>
    <relationshipName>Scale_Entitlements_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>