force-app/main/default/objects/Scale_Entitlement__c/fields/Renewal_Category__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Category__c</fullName>
    <description>ARY-838-Populate the Renewal Category based on Renewed on Scale Enitlement</description>
    <label>Renewal Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Refreshed</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Upgraded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>