force-app/main/default/objects/Scale_Entitlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field determines if the linked Asset is valid for financial reporting and eligible for a transaction. This is key for ARR calculations and other related functionality.</description>
    <inlineHelpText>Shows if the linked Asset is valid for financial reporting and ARR calculation or eligible for transaction considerations</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>