force-app/main/default/objects/Scale_Entitlement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field tells you if the entitlement&apos;s scale is for a base license or a delta license.</description>
    <inlineHelpText>Is this a base entitlement or a delta entitlement link?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Non-Scale</fullName>
            </value>
            <value>
                <fullName>Refreshed Base License</fullName>
            </value>
            <value>
                <fullName>Refreshed Delta License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>